--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 		<title>my app</title>
 	</head>
 	<body>
-		<hq1>Hello Express.js</hq1>
+		<h1>Hello Express.js</hq1>
+		<h1>welcome to my node middle ware authentication app</h1>
 		</body>
 </html>
